# radiology_prompt_optimization_lab

./: README.md  pyproject.toml
benchmark/: catalog.json  dev.jsonl
prompts/analyzer/: system_message.txt
prompts/normalizer/: current_system_prompt.txt
prompts/optimizer/: system_message.txt
scripts/: reset_lab.sh
src/: run_lab.py
src/radnorm/: __init__.py  benchmark.py  benchmark_profile.py  config.py  evaluation.py  leakage_guard.py  logging_utils.py  optimizer_loop.py  parser.py  policy.py  reporting.py  schemas.py
src/radnorm/agents/: __init__.py  agno_openai.py  base.py  factory.py  mock.py
